# ollasuper

./: .gitignore  Cargo.toml  FRONTEND-CLONE-PLAN.md  HANDOFF.md  PERSONA-TEST-REPORT-2026-06-13.md  PERSONA-TEST-REPORT-POST-16.5.md  PROD-DEPLOY.md  Restore-LastBackup.ps1  agents_builder.html.tera  auth.html.tera  auth.spec.ts  backup-db.ps1  billing.html.tera  catalog.html.tera  chat.html.tera  dashboard.html.tera  deploy-vm.ps1  dns_ids.json  documents.html.tera  editor_compare.html.tera  experts-50-rewrites.json  experts-50.json  facts.json  home.html  install-task.ps1  onboarding.html.tera  onboarding_progress.html.tera  package-lock.json  package.json  placeholder.html.tera  playwright.config.ts  project.html.tera  run-dev.ps1  settings.html.tera  sources.html.tera  start.ps1  tailwind.config.js  templates.html.tera  verify-backup-restore.ps1  welcome.html.tera  (+1 more)
